--- a/Project/Views/Pages/SelectPages/SelectNewTask.xaml
+++ b/Project/Views/Pages/SelectPages/SelectNewTask.xaml
@@ -2,13 +2,34 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:vm="clr-namespace:Project.ViewModels"
       xmlns:local="clr-namespace:Project.Views.Pages.SelectPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SelectNewTask">
 
     <Grid>
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Button Grid.Row="0" Grid.Column="0" Content="Create new test" Command="{Binding SelectCommand}" CommandParameter="0" ></Button>
+        <Button Grid.Row="0" Grid.Column="1" Content="Load test" Command="{Binding SelectCommand}" CommandParameter="1"></Button>
+        <Button Grid.Row="0" Grid.Column="2" Content="2" Command="{Binding SelectCommand}" ></Button>
+        <Button Grid.Row="0" Grid.Column="3" Content="3" Command="{Binding SelectCommand}" ></Button>
         
     </Grid>
 </Page>
