--- a/Project/Views/Pages/SelectPages/SelectNewTestSand.xaml
+++ b/Project/Views/Pages/SelectPages/SelectNewTestSand.xaml
@@ -1,14 +1,35 @@
-﻿<Page x:Class="Project.Views.Pages.SelectPages.SelectNewTestSoil"
+﻿<UserControl x:Class="Project.Views.Pages.SelectPages.SelectNewTestSand"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Project.Views.Pages.SelectPages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="SelectNewTestSoil">
+      d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" />
+        <Button Grid.Row="0" Grid.Column="1" Content="1"/>
+        <Button Grid.Row="0" Grid.Column="2" Content="2"/>
+        <Button Grid.Row="0" Grid.Column="3" Content="3"/>
+        <Button Grid.Row="0" Grid.Column="4" Content="4"/>
+
+        <Button Grid.Row="4" Grid.Column="4" Content="Вернутся на главную" Command="{Binding ReturnToNewTaskPageCommand}"/>
+
     </Grid>
-</Page>
+</UserControl>
