--- a/Project/Views/Pages/TestPages/Sand/MoistureSandTestPage.xaml
+++ b/Project/Views/Pages/TestPages/Sand/MoistureSandTestPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Project.Views.Pages.TestPages.Soil.MoistureTestPage"
+﻿<Page x:Class="Project.Views.Pages.TestPages.Sand.MoistureSandTestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Project.Views.Pages.TestPages.Soil"
+      xmlns:local="clr-namespace:Project.Views.Pages.TestPages.Sand"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MoistureTestPage">
+      Title="MoistureSandTestPage">
 
     <Grid>
         
