--- a/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
@@ -59,7 +59,7 @@
         <Button Grid.Row="5" Grid.Column="4" Content="Save" Command="{Binding SaveTestCommand}"/>
 
         <Button Grid.Row="7" Grid.Column="4" Content="Вернуться"/>
-        <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="4" TextWrapping="Wrap" Text="{Binding ContentSt}"/>
+        <TextBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="4" TextWrapping="Wrap" Text="{Binding ContentSt}"/>
 
 
 
