--- a/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
@@ -40,12 +40,12 @@
 
         <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding MoistureTest.MoistureSoilTestId}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding MoistureTest.MaterialName}"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.CustomerTest.Title}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.CustomerTest.ContractNumber}"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.Title}"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.ContractNumber}"/>
         <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding MoistureTest.DateTest}"/>
         <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding MoistureTest.DocumentTest}"/>
 
-        <Button Grid.Row="2" Grid.Column="2" Content="Выбрать заказчика"/>
+        <Button Grid.Row="2" Grid.Column="2" Content="Выбрать заказчика" Command="{Binding OpenSelectCostumerCommand}"/>
 
         <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding MoistureTest.SoilWetMassWithBox.DimensionName}"/>
         <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding MoistureTest.SoilDryMassWithBox.DimensionName}"/>
@@ -58,8 +58,8 @@
         <Button Grid.Row="4" Grid.Column="4" Content="Рассчитать влажность" Command="{Binding CalculateMoistureCommand}"/>
         <Button Grid.Row="5" Grid.Column="4" Content="Save" Command="{Binding SaveTestCommand}"/>
 
-        <Button Grid.Row="7" Grid.Column="4" Content="Вернуться"/>
-        <TextBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="4" TextWrapping="Wrap" Text="{Binding ContentSt}"/>
+        <TextBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="4" TextWrapping="Wrap"/>
+        <Button Grid.Row="7" Grid.Column="4" Content="Return" Command="{Binding ViewModel.ReturnToNewTaskPageCommand}"/>
 
 
 
