--- a/Project/App.xaml
+++ b/Project/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="Project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Project"
-             StartupUri="Views/Windows/MainWindow.xaml">
+             xmlns:local="clr-namespace:Project">
+    <!--StartupUri="Views/Windows/MainWindow.xaml"-->
     <Application.Resources>
          
     </Application.Resources>
