--- a/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
+++ b/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
@@ -7,9 +7,9 @@
              xmlns:vml="clr-namespace:Project.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.DataContext>
+    <!--<UserControl.DataContext>
         <vml:LoadUserViewModel/>
-    </UserControl.DataContext>
+    </UserControl.DataContext>-->
     <Grid>
         <ListBox Grid.Column="0" ItemsSource="{Binding LoadedListTests}">
             <ListBox.ItemTemplate>
