--- a/Project/Views/Windows/LoadCostumerDialogWindow.xaml
+++ b/Project/Views/Windows/LoadCostumerDialogWindow.xaml
@@ -2,8 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:vm="clr-namespace:Project.ViewModels.TestViewModel.Soil"
-        d:DataContext="{d:DesignInstance vm:MoistureSoilTestViewModel, IsDesignTimeCreatable=True}"
+        xmlns:vm="clr-namespace:Project.ViewModels"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project.Views.Windows"
         mc:Ignorable="d"
@@ -14,8 +13,13 @@
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
         
-        <ListBox Grid.Row="0" Name="CostumersList" ItemsSource="{Binding ViewModel.Costumers}"
+        <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="CostumersList" ItemsSource="{Binding ViewModel.Costumers}"
                  SelectedItem="{Binding SelectedCostumer}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -28,6 +32,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="1" Content="Select" Command="{Binding LoadCostumerFromListCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Select" Command="{Binding LoadCostumerFromListCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Select" Command="{Binding LoadCostumerFromListCommand}"/>
     </Grid>
 </Window>
