--- a/Project/Views/Windows/MainWindow.xaml
+++ b/Project/Views/Windows/MainWindow.xaml
@@ -7,9 +7,9 @@
         xmlns:local="clr-namespace:Project"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Window.DataContext>
+    <!--<Window.DataContext>
         <vm:MainWindowViewModel/>
-    </Window.DataContext>
+    </Window.DataContext>-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"/>
