--- a/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
+++ b/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
@@ -11,7 +11,17 @@
         <vml:LoadUserViewModel/>
     </UserControl.DataContext>-->
     <Grid>
-        <ListBox Grid.Column="0" ItemsSource="{Binding LoadedListTests}">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0.1*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding LoadedListTests}" 
+                 SelectedItem="{Binding TestForLoading}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5">
@@ -22,6 +32,8 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
+        <Button Grid.Row="1" Grid.Column="0" Content="Загрузить" />
 
     </Grid>
 </UserControl>
