--- a/Project/Views/UserControls/SelectUserControls/SelectNewTestSoil.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectNewTestSoil.xaml
@@ -24,7 +24,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" Command="{Binding SelectSoilTestCommand}" />
+        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" Command="{Binding SelectSoilTestCommand}" CommandParameter="0" />
         <Button Grid.Row="0" Grid.Column="1" Content="1"/>
         <Button Grid.Row="0" Grid.Column="2" Content="2"/>
         <Button Grid.Row="0" Grid.Column="3" Content="3"/>
