--- a/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
+++ b/Project/Views/UserControls/LoadUserControl/LoadUserControl.xaml
@@ -33,7 +33,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="Загрузить" Command="{Binding LoadTestFromBD}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Загрузить" Command="{Binding LoadTestFromBDCommand}"/>
 
     </Grid>
 </UserControl>
