--- a/Project/Views/UserControls/CostumersUserControl/CostumersListUserControl.xaml
+++ b/Project/Views/UserControls/CostumersUserControl/CostumersListUserControl.xaml
@@ -2,7 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:Project.ViewModels"
+             d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
              xmlns:local="clr-namespace:Project.Views.UserControls.CostumersUserControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -31,8 +33,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Command="{Binding LoadCostumerFromListCommand}"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="Редактировать" Command="{Binding LoadCostumerFromListCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Command="{Binding OpenFormForCostumerAddEditCommand}" CommandParameter="add"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="Редактировать" Command="{Binding OpenFormForCostumerAddEditCommand}"/>
 
     </Grid>
 </UserControl>
