--- a/Project/Views/UserControls/CostumersUserControl/FormForCostumerAddEditUserControl.xaml
+++ b/Project/Views/UserControls/CostumersUserControl/FormForCostumerAddEditUserControl.xaml
@@ -1,8 +1,10 @@
-﻿<UserControl x:Class="Project.Views.UserControls.CostumersUserControl.FormForCostumerAddUserControl"
+﻿<UserControl x:Class="Project.Views.UserControls.CostumersUserControl.FormForCostumerAddEditUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:Project.ViewModels"
+             d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
              xmlns:local="clr-namespace:Project.Views.UserControls.CostumersUserControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -18,9 +20,11 @@
 
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="0">Название компании</TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedCostumer.Title}"/>
         <TextBlock Grid.Row="1" Grid.Column="0">Номер договора</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedCostumer.ContractNumber}"/>
+
+        <Button Grid.Row="2" Content="Сохранить" Command="{Binding SaveEditCostumerInBDCommand}"/>
 
     </Grid>
 </UserControl>
