--- a/Project/Views/UserControls/SelectUserControls/SelectTypeTest.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectTypeTest.xaml
@@ -2,9 +2,10 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUsercontrols"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:vm="clr-namespace:Project.ViewModels"
+      d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
+      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUsercontrols"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
