--- a/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:Project.ViewModels"
+             d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
              xmlns:local="clr-namespace:Project.Views.UserControls.TestUserControls.Soil"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -37,8 +39,8 @@
 
         <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding MoistureTest.MoistureSoilTestId}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding MoistureTest.MaterialName}"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.Title}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.ContractNumber}"/>
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.Title}"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.CostumerTest.ContractNumber}"/>
         <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding MoistureTest.DateTest}"/>
         <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding MoistureTest.DocumentTest}"/>
 
