--- a/Project/Views/UserControls/CustomersUserControl/CustomersListUserControl.xaml
+++ b/Project/Views/UserControls/CustomersUserControl/CustomersListUserControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Project.Views.UserControls.CostumersUserControl.CostumersListUserControl"
+﻿<UserControl x:Class="Project.Views.UserControls.CustomersUserControl.CustomersListUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:Project.ViewModels"
              d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-             xmlns:local="clr-namespace:Project.Views.UserControls.CostumersUserControl"
+             xmlns:local="clr-namespace:Project.Views.UserControls.CustomersUserControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -20,8 +20,8 @@
         </Grid.ColumnDefinitions>
 
 
-        <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="CostumersList" ItemsSource="{Binding Costumers}"
-                 SelectedItem="{Binding SelectedCostumer}">
+        <ListBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="CustomersList" ItemsSource="{Binding Customers}"
+                 SelectedItem="{Binding SelectedCustomer}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5">
@@ -33,8 +33,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Command="{Binding OpenFormForCostumerAddEditCommand}" CommandParameter="add"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="Редактировать" Command="{Binding OpenFormForCostumerAddEditCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Command="{Binding OpenFormForCustomerAddCommand}"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="Редактировать" Command="{Binding OpenFormForCustomerEditCommand}"/>
 
     </Grid>
 </UserControl>
