--- a/Project/Views/UserControls/CustomersUserControl/FormForCustomerAddEditUserControl.xaml
+++ b/Project/Views/UserControls/CustomersUserControl/FormForCustomerAddEditUserControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Project.Views.UserControls.CostumersUserControl.FormForCostumerAddEditUserControl"
+﻿<UserControl x:Class="Project.Views.UserControls.CustomersUserControl.FormForCustomerAddEditUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:Project.ViewModels"
              d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-             xmlns:local="clr-namespace:Project.Views.UserControls.CostumersUserControl"
+             xmlns:local="clr-namespace:Project.Views.UserControls.CustomersUserControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
