--- a/Project/Views/UserControls/SelectUserControls/SelectNewTask.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectNewTask.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Project.Views.UserControls.SelectUsercontrols.SelectNewTask"
+﻿<UserControl x:Class="Project.Views.UserControls.SelectUserControls.SelectNewTask"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:vm="clr-namespace:Project.ViewModels"
       d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUsercontrols"
+      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUserControls"
+      xmlns:enum="clr-namespace:ProjectCommon.Enums;assembly=ProjectCommon"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -27,9 +28,9 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Создать новый тест" Command="{Binding SelectNewTaskCommand}" CommandParameter="0" ></Button>
-        <Button Grid.Row="0" Grid.Column="1" Content="Загрузить тест" Command="{Binding SelectNewTaskCommand}" CommandParameter="1"></Button>
-        <Button Grid.Row="0" Grid.Column="2" Content="Список заказчиков" Command="{Binding SelectNewTaskCommand}" CommandParameter="2"></Button>
+        <Button Grid.Row="0" Grid.Column="0" Content="Создать новый тест" Command="{Binding SelectNewTaskCommand}" CommandParameter="{x:Static enum:TaskType.NewTest}" ></Button>
+        <Button Grid.Row="0" Grid.Column="1" Content="Загрузить тест" Command="{Binding SelectNewTaskCommand}" CommandParameter="{x:Static enum:TaskType.LoadTest}"></Button>
+        <Button Grid.Row="0" Grid.Column="2" Content="Список заказчиков" Command="{Binding SelectNewTaskCommand}" CommandParameter="{x:Static enum:TaskType.CostumersList}"></Button>
         <Button Grid.Row="0" Grid.Column="3" Content="3" Command="{Binding SelectNewTaskCommand}" CommandParameter="3"></Button>
         
     </Grid>
