--- a/Project/Views/UserControls/SelectUserControls/SelectNewTestSoil.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectNewTestSoil.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Project.Views.UserControls.SelectUsercontrols.SelectNewTestSoil"
+﻿<UserControl x:Class="Project.Views.UserControls.SelectUserControls.SelectNewTestSoil"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:vm="clr-namespace:Project.ViewModels"
       d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUsercontrols"
+      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUserControls"
+      xmlns:enum="clr-namespace:ProjectCommon.Enums;assembly=ProjectCommon"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -26,7 +27,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" Command="{Binding SelectSoilTestCommand}" CommandParameter="0" />
+        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" Command="{Binding SelectSoilTestCommand}" CommandParameter="{x:Static enum:ExperimentType.Moister}" />
         <Button Grid.Row="0" Grid.Column="1" Content="1"/>
         <Button Grid.Row="0" Grid.Column="2" Content="2"/>
         <Button Grid.Row="0" Grid.Column="3" Content="3"/>
