--- a/Project/Views/UserControls/SelectUserControls/SelectTypeTest.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectTypeTest.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="Project.Views.UserControls.SelectUsercontrols.SelectTypeTest"
+﻿<UserControl x:Class="Project.Views.UserControls.SelectUserControls.SelectTypeTest"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:vm="clr-namespace:Project.ViewModels"
       d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUsercontrols"
+      xmlns:local="clr-namespace:Project.Views.UserControls.SelectUserControls"
+      xmlns:enum="clr-namespace:ProjectCommon.Enums;assembly=ProjectCommon"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -25,11 +26,11 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Грунт" Command="{Binding SelectTypeTestCommand}" CommandParameter="0" />
-        <Button Grid.Row="0" Grid.Column="1" Content="Песок" Command="{Binding SelectTypeTestCommand}" CommandParameter="1"/>
-        <Button Grid.Row="0" Grid.Column="2" Content="Щебень" Command="{Binding SelectTypeTestCommand}" CommandParameter="2"/>
-        <Button Grid.Row="0" Grid.Column="3" Content="ПГС" Command="{Binding SelectTypeTestCommand}" CommandParameter="3"/>
-        <Button Grid.Row="0" Grid.Column="4" Content="Геотекстиль" Command="{Binding SelectTypeTestCommand}" CommandParameter="4"/>
+        <Button Grid.Row="0" Grid.Column="0" Content="Грунт" Command="{Binding SelectTypeTestCommand}" CommandParameter="{x:Static enum:MaterialType.Soil}" />
+        <Button Grid.Row="0" Grid.Column="1" Content="Песок" Command="{Binding SelectTypeTestCommand}" CommandParameter="{x:Static enum:MaterialType.Sand}"/>
+        <Button Grid.Row="0" Grid.Column="2" Content="Щебень" Command="{Binding SelectTypeTestCommand}" CommandParameter="{x:Static enum:MaterialType.Gravel}"/>
+        <Button Grid.Row="0" Grid.Column="3" Content="ПГС" Command="{Binding SelectTypeTestCommand}" CommandParameter="{x:Static enum:MaterialType.SandAndGravel}"/>
+        <Button Grid.Row="0" Grid.Column="4" Content="Геотекстиль" Command="{Binding SelectTypeTestCommand}" CommandParameter="{x:Static enum:MaterialType.Geotextile}"/>
 
         <Button Grid.Row="4" Grid.Column="4" Content="Вернутся на главную" Command="{Binding ReturnToNewTaskPageCommand}"/>
 
