--- a/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/MoistureSoilTestUC.xaml
@@ -37,10 +37,10 @@
         <TextBlock Grid.Row="4" Grid.Column="0" Text="Дата испытания"/>
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Нормативный документ"/>
 
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding MoistureTest.MoistureSoilTestId}"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding MoistureTest.TestNumber}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding MoistureTest.MaterialName}"/>
-        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.CustomerTest.Title}"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.CustomerTest.ContractNumber}"/>
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding MoistureTest.Customer.Title}"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding MoistureTest.Customer.ContractNumber}"/>
         <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding MoistureTest.DateTest}"/>
         <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding MoistureTest.DocumentTest}"/>
 
@@ -49,16 +49,12 @@
         <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding MoistureTest.SoilWetMassWithBox.DimensionName}"/>
         <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding MoistureTest.SoilDryMassWithBox.DimensionName}"/>
         <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding MoistureTest.BoxMass.DimensionName}"/>
-        <TextBlock Grid.Row="3" Grid.Column="3" Text="{Binding MoistureTest.MoistureSoil.DimensionName}"/>
+        <TextBlock Grid.Row="3" Grid.Column="3" Text="{Binding MoistureTest.Moisture.DimensionName}"/>
         <TextBox Grid.Row="0" Grid.Column="4" Text="{Binding MoistureTest.SoilWetMassWithBox.DimensionValue}"/>
         <TextBox Grid.Row="1" Grid.Column="4" Text="{Binding MoistureTest.SoilDryMassWithBox.DimensionValue}"/>
         <TextBox Grid.Row="2" Grid.Column="4" Text="{Binding MoistureTest.BoxMass.DimensionValue}"/>
-        <TextBlock Grid.Row="3" Grid.Column="4" Text="{Binding MoistureTest.MoistureSoil.DimensionValue}"/>
+        <TextBlock Grid.Row="3" Grid.Column="4" Text="{Binding MoistureTest.Moisture.DimensionValue}"/>
         <Button Grid.Row="4" Grid.Column="4" Content="Рассчитать влажность" Command="{Binding CalculateMoistureCommand}"/>
         <Button Grid.Row="5" Grid.Column="4" Content="Save" Command="{Binding SaveMoistureSoilTestCommand}"/>
-
-
-        <TextBox Grid.Row="6" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="4" Text="{Binding Jsoncont}"/>
-
     </Grid>
 </UserControl>
