--- a/Project/App.xaml
+++ b/Project/App.xaml
@@ -16,6 +16,12 @@
                 <Setter Property="FontFamily" Value="Comic Sans MS"/>
                 <Setter Property="FontSize" Value="14"/>
             </Style>
+            <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="{x:Type Button}">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Height" Value="100"/>
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
