--- a/Project/Views/UserControls/SelectUserControls/SelectNewTestSand.xaml
+++ b/Project/Views/UserControls/SelectUserControls/SelectNewTestSand.xaml
@@ -25,10 +25,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Влажность" />
-        <Button Grid.Row="0" Grid.Column="1" Content="1"/>
-        <Button Grid.Row="0" Grid.Column="2" Content="2"/>
-        <Button Grid.Row="0" Grid.Column="3" Content="3"/>
-        <Button Grid.Row="0" Grid.Column="4" Content="4"/>
+        <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Content="Влажность" />
+        <Button Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Content="1"/>
+        <Button Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Content="2"/>
+        <Button Grid.Row="0" Grid.Column="3" Grid.RowSpan="2" Content="3"/>
+        <Button Grid.Row="0" Grid.Column="4" Grid.RowSpan="2" Content="4"/>
     </Grid>
 </UserControl>
