--- a/Project/Views/Windows/MainWindow.xaml
+++ b/Project/Views/Windows/MainWindow.xaml
@@ -17,9 +17,9 @@
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.12*"/>
+            <RowDefinition Height="0.12*"/>
+            <RowDefinition Height="0.12*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -35,7 +35,7 @@
         <UserControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="2" Content="{Binding LoginUserControl}"/>
 
         <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="7" Text="{Binding ErrorMessage}"/>
-        <Button Grid.Row="1" Grid.Column="6" Content="Возврат" Command="{Binding ReturnToNewTaskPageCommand}"/>
+        <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}" Grid.Row="1" Grid.Column="6" Content="Возврат" Command="{Binding ReturnToNewTaskPageCommand}" Margin="5" VerticalContentAlignment="Center"/>
         <UserControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="7" Name="MainFrame" Content="{Binding MainUserControl}"/>
     </Grid>
 </Window>
