--- a/Project/Views/UserControls/CustomersUserControl/CustomersListUserControl.xaml
+++ b/Project/Views/UserControls/CustomersUserControl/CustomersListUserControl.xaml
@@ -33,8 +33,19 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="Добавить" Command="{Binding OpenFormForCustomerAddCommand}"/>
-        <Button Grid.Row="1" Grid.Column="1" Content="Редактировать" Command="{Binding OpenFormForCustomerEditCommand}"/>
+        <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}" 
+                Grid.Row="1" 
+                Grid.Column="0" 
+                Content="Добавить" 
+                Command="{Binding OpenFormForCustomerAddCommand}"
+                Margin="5"/>
+        
+        <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}"
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="Редактировать"
+                Command="{Binding OpenFormForCustomerEditCommand}"
+                Margin="5"/>
 
     </Grid>
 </UserControl>
