--- a/Project/Views/UserControls/CustomersUserControl/CustomersSelectUserControl.xaml
+++ b/Project/Views/UserControls/CustomersUserControl/CustomersSelectUserControl.xaml
@@ -21,9 +21,16 @@
 
         </Grid.ColumnDefinitions>
 
-        <UserControl Grid.Row="0" Grid.ColumnSpan="2" Content="{Binding CustomersListUserControl}"/>
+        <UserControl Grid.Row="0" 
+                     Grid.ColumnSpan="2" 
+                     Content="{Binding CustomersListUserControl}"/>
 
-        <Button Grid.Row="1" Grid.Column="0" Content="Выбрать" Command="{Binding LoadCustomerFromListCommand}"/>
+        <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}"
+                Grid.Row="1"
+                Grid.Column="0"
+                Content="Выбрать"
+                Command="{Binding LoadCustomerFromListCommand}"
+                Margin="5"/>
 
 
 
