Логин JWT и редактирование кода

--- a/Project/Views/Windows/MainWindow.xaml
+++ b/Project/Views/Windows/MainWindow.xaml
@@ -36,7 +36,7 @@
                      Grid.Column="0" 
                      Grid.ColumnSpan="6" 
                      Grid.RowSpan="2" 
-                     Content="{Binding LoginUserControl}"/>
+                     Content="{Binding AuthUserControl}"/>
 
         <TextBlock Grid.Row="2"
                    Grid.Column="0"
